--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.google.code.gson:gson:2.2.4'
     implementation project(':easysocket')
+//    implementation project(':socker_server')
     implementation 'com.blankj:utilcode:1.24.7'
+    implementation 'com.alibaba:fastjson:1.2.49'
 }
