--- a/easysocket/build.gradle
+++ b/easysocket/build.gradle
@@ -28,6 +28,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.google.code.gson:gson:2.2.4'
+    implementation 'com.blankj:utilcode:1.24.7'
 }
 
 sourceCompatibility = "7"
