--- a/socker_server/build.gradle
+++ b/socker_server/build.gradle
@@ -4,6 +4,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.blankj:utilcode:1.24.7'
 }
 
 
