--- a/easysocket/build.gradle
+++ b/easysocket/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.google.code.gson:gson:2.2.4'
     implementation 'com.blankj:utilcode:1.24.7'
+    implementation 'com.alibaba:fastjson:1.2.49'
 }
 
 sourceCompatibility = "7"
